# serializer version: 1
# name: test_load_cellpack[bcif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[bcif].1
  '''
  Cv0
  Cv1
  Cv10
  Cv11
  Cv12
  Cv13
  Cv2
  Cv3
  Cv4
  Cv5
  Cv6
  Cv7
  Cv8
  Cv9
  Ed0
  Ed1
  Ed2
  Ed3
  Ed4
  Ed5
  Ed6
  Ed7
  Ed8
  Gb0
  Gb1
  Gb2
  Gb3
  Gg01
  Gg02
  Gg03
  Gg04
  Gg11
  Gg12
  Gg13
  Gg14
  Gh01
  Gh02
  Gh03
  Gh04
  Gi01
  Gi02
  Gi03
  Gi04
  '''
# ---
# name: test_load_cellpack[bcif].10
  tuple(
    78079,
    3,
  )
# ---
# name: test_load_cellpack[bcif].11
  array([[ 4.85001   ,  5.22001   ,  0.33998   ],
         [ 4.9088597 ,  5.1272    ,  0.12058   ],
         [ 4.90488   ,  5.12826   ,  0.13482   ],
         ...,
         [11.73818   , -9.592943  ,  0.07578434],
         [11.753367  , -9.576974  ,  0.07908607],
         [11.715687  , -9.584151  ,  0.08706783]], dtype=float32)
# ---
# name: test_load_cellpack[bcif].2
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[bcif].3
  array([1, 1, 1, ..., 1, 1, 1], dtype=int32)
# ---
# name: test_load_cellpack[bcif].4
  array([23, 24, 25, ..., 42, 42, 42], dtype=int32)
# ---
# name: test_load_cellpack[bcif].5
  array([ 0,  0,  0, ..., 14, 14, 14], dtype=int32)
# ---
# name: test_load_cellpack[bcif].6
  array([[ 10.2       ,  10.2       ,   0.        ],
         [ 10.2       ,  10.2       ,   0.        ],
         [ 10.2       ,  10.2       ,   0.        ],
         ...,
         [ 11.4733    , -10.0471    ,   0.3316    ],
         [ 10.7361    ,  -9.3912    ,   0.33990002],
         [ 10.448101  ,  -9.1335    ,   0.3397    ]], dtype=float32)
# ---
# name: test_load_cellpack[bcif].7
  array([[ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         ...,
         [ 8.3249348e-01, -3.0876666e-01, -4.6003047e-01, -4.2994438e-05],
         [ 7.0696634e-01, -4.7175318e-01, -5.2701992e-01,  6.6204775e-05],
         [ 7.0696634e-01, -4.7175318e-01, -5.2701992e-01,  6.6204775e-05]],
        dtype=float32)
# ---
# name: test_load_cellpack[bcif].8
  array([], dtype=bool)
# ---
# name: test_load_cellpack[bcif].9
  array([    0,     0,     0, ..., 18199, 18200, 18201], dtype=int32)
# ---
# name: test_load_cellpack[cif]
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif].1
  '''
  Cv0
  Cv1
  Cv10
  Cv11
  Cv12
  Cv13
  Cv2
  Cv3
  Cv4
  Cv5
  Cv6
  Cv7
  Cv8
  Cv9
  Ed0
  Ed1
  Ed2
  Ed3
  Ed4
  Ed5
  Ed6
  Ed7
  Ed8
  Gb0
  Gb1
  Gb2
  Gb3
  Gg01
  Gg02
  Gg03
  Gg04
  Gg11
  Gg12
  Gg13
  Gg14
  Gh01
  Gh02
  Gh03
  Gh04
  Gi01
  Gi02
  Gi03
  Gi04
  '''
# ---
# name: test_load_cellpack[cif].10
  tuple(
    78079,
    3,
  )
# ---
# name: test_load_cellpack[cif].11
  array([[ 4.85001   ,  5.22001   ,  0.33998   ],
         [ 4.9088597 ,  5.1272    ,  0.12058   ],
         [ 4.90488   ,  5.12826   ,  0.13482   ],
         ...,
         [11.73818   , -9.592943  ,  0.07578434],
         [11.753367  , -9.576974  ,  0.07908607],
         [11.715687  , -9.584151  ,  0.08706783]], dtype=float32)
# ---
# name: test_load_cellpack[cif].2
  array([ True,  True,  True, ...,  True,  True,  True])
# ---
# name: test_load_cellpack[cif].3
  array([1, 1, 1, ..., 1, 1, 1], dtype=int32)
# ---
# name: test_load_cellpack[cif].4
  array([23, 24, 25, ..., 42, 42, 42], dtype=int32)
# ---
# name: test_load_cellpack[cif].5
  array([ 0,  0,  0, ..., 14, 14, 14], dtype=int32)
# ---
# name: test_load_cellpack[cif].6
  array([[ 10.2       ,  10.2       ,   0.        ],
         [ 10.2       ,  10.2       ,   0.        ],
         [ 10.2       ,  10.2       ,   0.        ],
         ...,
         [ 11.4733    , -10.0471    ,   0.3316    ],
         [ 10.7361    ,  -9.3912    ,   0.33990002],
         [ 10.448101  ,  -9.1335    ,   0.3397    ]], dtype=float32)
# ---
# name: test_load_cellpack[cif].7
  array([[ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         [ 0.0000000e+00,  0.0000000e+00,  0.0000000e+00,  1.0000000e+00],
         ...,
         [ 8.3249348e-01, -3.0876666e-01, -4.6003047e-01, -4.2994438e-05],
         [ 7.0696634e-01, -4.7175318e-01, -5.2701992e-01,  6.6204775e-05],
         [ 7.0696634e-01, -4.7175318e-01, -5.2701992e-01,  6.6204775e-05]],
        dtype=float32)
# ---
# name: test_load_cellpack[cif].8
  array([], dtype=bool)
# ---
# name: test_load_cellpack[cif].9
  array([    0,     0,     0, ..., 18199, 18200, 18201], dtype=int32)
# ---
